# Roster_Monster

./: .gitignore  API_DOCUMENTATION.md  Dockerfile.backend  Dockerfile.frontend  IMPROVEMENTS_SUMMARY.md  README.md  add_templates.py  docker-compose.dev.yml  docker-compose.yml  env.example  nginx.conf  package-lock.json  package.json  template_data.json
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6bd7dbd0cfc1_changes_for_admin.py  a05daf732f7d_first_models.py  ad3bd9ad01ff_initial_migrations.py  c1caebaac25a_initial_migrations.py  c83554cea7fa_changes_for_admin.py
backend/app/: auth.py  infer.py  logging_config.py  main.py  models.py  oauth2.py  schemas.py  security.py  utils.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  availability.py  leave_requests.py  shifts.py
backend/app/config/: __init__.py  config.py  database.py  redis_db.py
backend/app/core/: database.py
backend/app/models/: base.py
backend/app/routers/: auth.py  availability.py  fte_management.py  location_management.py  report.py  roster_management.py  staff_management.py  template.py  template_helper.py  template_requirement.py  template_slot.py  template_staff.py  template_time_slot.py  template_week.py  template_week_day.py  template_week_day_slot.py  template_week_day_slot_staff.py  template_week_day_slot_staff_requirement.py  template_week_day_slot_staff_requirement_group.py  template_week_day_slot_staff_requirement_group_staff.py  user.py  websocket_client.py  websockets.py
backend/app/schemas/: auth.py  base.py  roster.py
backend/app/service/: __init__.py  auth.py
backend/app/services/: auth.py
backend2/: .gitignore  README.md  alembic.ini  pyproject.toml
backend2/alembic/: env.py
backend2/app/: __init__.py  config.py  database.py  env.example  main.py
backend2/app/models/: __init__.py  fte.py  leave.py  location.py  shift.py  staff.py  subscription.py  user.py
backend2/app/routers/: __init__.py  auth.py  fte.py  leave.py  location.py  schedule.py  shift.py  staff.py  subscription.py  user.py
backend2/app/schemas/: __init__.py  fte.py  leave.py  location.py  shift.py  staff.py  user.py
backend2/app/services/: fte_crud.py  leave_crud.py  location_crud.py  shift_crud.py  user_crud.py
backend2/tests/: test_auth.sh  test_leave.sh  test_location.sh  test_schedule.sh  test_shift.sh  test_subscription.sh  test_user.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/.next/: trace
frontend/.next/server/: server-reference-manifest.json
frontend/src/: App.tsx  main.tsx  middleware.ts
frontend/src/components/: ConfirmDialog.tsx  ErrorPopup.tsx  Header.tsx  History.tsx  Loader.tsx  Login.tsx  NotFound.tsx  ProtectedRoute.tsx  Sidebar.tsx  SignUp.tsx  UserMenu.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useApiError.ts  useApiError.tsx  useAvailability.ts  useLeaveRequests.ts  useShifts.ts
frontend/src/lib/: auth-types.ts  fte.ts  holidays.ts  leave.ts  notifications.ts  roles.ts  roster.ts  sample-data.ts
frontend/src/pages/: _app.tsx  index.tsx  register.tsx  settings.tsx  subscription.tsx
scripts/: deploy_prod.sh  setup_dev.sh  start_backend.sh
(+72 files in other folders)
