[project]
name = "app"
version = "1.0.0"
description = ""
authors = [
    {name = "Rohit Takhar",email = "rohit.takhar1994@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
package-mode = false
dependencies = [
    "annotated-types (>=0.7.0,<0.8.0)",
    "anyio (>=4.8.0,<5.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "certifi (>=2024.12.14,<2025.0.0)",
    "cffi (>=1.17.1,<2.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "dnspython (>=2.7.0,<3.0.0)",
    "ecdsa (>=0.19.0,<0.20.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "h11 (>=0.14.0,<0.15.0)",
    "hiredis (>=3.1.0,<4.0.0)",
    "httpcore (>=1.0.7,<2.0.0)",
    "httptools (>=0.6.4,<0.7.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "idna (>=3.10,<4.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "more-itertools (>=10.5.0,<11.0.0)",
    "mysql-connector-python (>=9.1.0,<10.0.0)",
    "mysqlclient (==2.1.1)",
    "orjson (>=3.10.13,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "protobuf (>=5.29.2,<6.0.0)",
    "pyasn1 (>=0.6.1,<0.7.0)",
    "pycparser (>=2.22,<3.0)",
    "pydantic (>=2.10.4,<3.0.0)",
    "pydantic-extra-types (>=2.10.1,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pydantic-core (>=2.27.2,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "python-jose (>=3.3.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "redis-om (>=0.3.3,<0.4.0)",
    "rsa (>=4.9,<5.0)",
    "six (>=1.17.0,<2.0.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "types-pyopenssl (>=24.1.0.20240722,<25.0.0.0)",
    "types-redis (>=4.6.0.20241004,<5.0.0.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "ujson (>=5.10.0,<6.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "watchfiles (>=1.0.3,<2.0.0)",
    "websockets (>=14.1,<15.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "openai (>=1.59.5,<2.0.0)",
    "minio (>=7.2.15,<8.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
